--- a/app/components/aboutme/index.html
+++ b/app/components/aboutme/index.html
@@ -4,8 +4,7 @@
         <script src="module.js"></script>
         </head>
     <body>
-       
-        <h1>
+       <h1 np-app>
             {{1+2}}
         </h1>
         <div ng-controller="Mycontroller">
